stock section has been created

--- a/index.html
+++ b/index.html
@@ -149,6 +149,47 @@
       </div>
     </section>
 
+    <section class="stock">
+      <div class="stock-container container">
+        <div class="stock-heading">
+          <h2 class="stock-title">Выгодные предложения</h2>
+          <a href="#" class="stock-link">Все акции</a>
+        </div>
+        <div class="stock-list">
+          <div class="stock-item">
+            <div class="stock-item__image">
+              <img src="/stock/stock-1.png" alt="">
+            </div>
+            <div class="stock-item__content">
+              <h4>Скидка 2000 на вторую покупку теплицы с поликарбонатом!</h4>
+              <p>Успейте с выгодой оформить заказ!</p>
+            </div>
+            <a href="#" class="stock-item__link">Подробнее</a>
+          </div>
+          <div class="stock-item">
+            <div class="stock-item__image">
+              <img src="/stock/stock-2.png" alt="">
+            </div>
+            <div class="stock-item__content">
+              <h4>Теплицы с хранением до Весны</h4>
+              <p>Сделайте шаг к вашему успешному огородничеству с нами уже сегодня!</p>
+            </div>
+            <a href="#" class="stock-item__link">Подробнее</a>
+          </div>
+          <div class="stock-item">
+            <div class="stock-item__image">
+              <img src="/stock/stock-3.png" alt="">
+            </div>
+            <div class="stock-item__content">
+              <h4>Кэшбек 200₽ за отзыв в Яндекс картах</h4>
+              <p>Акция от нашего магазина! Получите кэшбек 200₽ за отзыв в Яндекс.Картах!</p>
+            </div>
+            <a href="#" class="stock-item__link">Подробнее</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     {{> _footer}}
 
     <script type="module" src="/main.js"></script>
