categories2 section has been created

--- a/index.html
+++ b/index.html
@@ -190,6 +190,52 @@
       </div>
     </section>
 
+    <section class="categories2">
+      <div class="categories-container container">
+        <div class="categories-list">
+          <a href="#" class="categories2-item">
+            <div class="categories2-item__heading">
+              <p class="categories2-item__descr">
+                Цена = качество
+              </p>
+              <h3 class="categories2-item__title">
+                Сотовый поликарбонат
+              </h3>
+            </div>
+            <div class="categories2-item__image">
+              <img src="/categories/categories-2-1.png" alt="">
+            </div>
+          </a>
+          <a href="#" class="categories2-item">
+            <div class="categories2-item__heading">
+              <p class="categories2-item__descr">
+                Для кровли без нахлеста
+              </p>
+              <h3 class="categories2-item__title">
+                Профилированный поликарбонат 6 м
+              </h3>
+            </div>
+            <div class="categories2-item__image">
+              <img src="/categories/categories-2-2.png" alt="">
+            </div>
+          </a>
+          <a href="#" class="categories2-item">
+            <div class="categories2-item__heading">
+              <p class="categories2-item__descr">
+                Ящик складной
+              </p>
+              <h3 class="categories2-item__title">
+                Товары для дома и дачи
+              </h3>
+            </div>
+            <div class="categories2-item__image">
+              <img src="/categories/categories-2-3.png" alt="">
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+
     {{> _footer}}
 
     <script type="module" src="/main.js"></script>
