about section has been created

--- a/index.html
+++ b/index.html
@@ -236,6 +236,25 @@
       </div>
     </section>
 
+    <section class="about">
+      <div class="about-container container">
+        <div class="about-content">
+          <div class="about-top">
+            <h2 class="about-title">
+              Легион Сервис - гарант качества
+            </h2>
+            <p class="about-descr">
+              Легион Сервис - гарант качества на рынке строительных материалов, а также товаров для дома и дачи. Уже более 7 лет мы стараемся увеличить ваш урожай, и уменьшить расходы. 
+            </p>
+            <a href="#" class="about-link">
+              Подробности
+            </a>
+          </div>
+          <div class="about-map" id="map"></div>
+        </div>
+      </div>
+    </section>
+
     {{> _footer}}
 
     <script type="module" src="/main.js"></script>
