review section has been created

--- a/index.html
+++ b/index.html
@@ -255,6 +255,133 @@
       </div>
     </section>
 
+    <section class="review">
+      <div class="review-container container">
+        <div class="review-heading">
+          <h2 class="review-title">О нас пишут</h2>
+          <div class="review-wrapper">
+            <a href="#" class="review-link white">
+              Оставить отзыв
+            </a>
+            <a href="#" class="review-link">
+              Все отзывы
+            </a>
+          </div>
+        </div>
+        <div class="review-slider">
+          <div class="js-review-slider swiper">
+            <div class="swiper-wrapper">
+              <div class="review-item swiper-slide">
+                <div class="review-item__heading">
+                  <p class="review-item__date">26 мая 2023</p>
+                  <h3 class="review-item__name">Анжелика Трофимова</h3>
+                  <div class="review-item__stars">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="review-item__text js-review-text">
+                  <p>
+                    Купили маме теплицу "Дачница Люкс усиленная". Всем рекомендую! Сейчас такой ритм жизни, что совсем нет времени ездить по магазинам. Сайт нашла в поиске. Понравились характеристики и адекватная цена за оцинкованную теплицу. Сайт нашла в поиске. Понравились характеристики и адекватная цена за оцинкованную теплицу.
+                  </p>
+                </div>
+                <div class="review-item__more js-review-more">
+                  Читать полностью
+                </div>
+              </div>
+              <div class="review-item swiper-slide">
+                <div class="review-item__heading">
+                  <p class="review-item__date">26 мая 2023</p>
+                  <h3 class="review-item__name">Анжелика Трофимова</h3>
+                  <div class="review-item__stars">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="review-item__text js-review-text">
+                  <p>
+                    Купили маме теплицу "Дачница Люкс усиленная". Всем рекомендую! Сейчас такой ритм жизни, что совсем нет времени ездить по магазинам. Сайт нашла в поиске. Понравились характеристики и адекватная цена за оцинкованную теплицу. Сайт нашла в поиске. Понравились характеристики и адекватная цена за оцинкованную теплицу.
+                  </p>
+                </div>
+                <div class="review-item__more js-review-more">
+                  Читать полностью
+                </div>
+              </div>
+              <div class="review-item swiper-slide">
+                <div class="review-item__heading">
+                  <p class="review-item__date">26 мая 2023</p>
+                  <h3 class="review-item__name">Анжелика Трофимова</h3>
+                  <div class="review-item__stars">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0948 8.54155L12.7941 13.86H12.1885L7.85392 10.9073L3.50861 13.86H2.90394L4.62971 8.5484L0.5 5.44574V5.04001H5.89L7.64615 0.140015H8.0313L8.03913 0.162565L9.81589 5.04001H15.2V5.38987L15.1843 5.40162L11.0948 8.54155Z" fill="#F6CF4C"/>
+                    </svg>
+                  </div>
+                </div>
+                <div class="review-item__text js-review-text">
+                  <p>
+                    Купили маме теплицу "Дачница Люкс усиленная". Всем рекомендую! Сейчас такой ритм жизни, что совсем нет времени ездить по магазинам. Сайт нашла в поиске. Понравились характеристики и адекватная цена.
+                  </p>
+                </div>
+                <div class="review-item__more js-review-more">
+                  Читать полностью
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="review-slider__navigation js-review-navigation">
+            <div class="prev">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M14.5417 17.5941C14.75 17.3858 14.855 17.1391 14.855 16.8533C14.855 16.57 14.7508 16.3225 14.5425 16.1141L8.43834 10.01L14.5633 3.88497C14.7575 3.69081 14.855 3.44747 14.855 3.15581C14.855 2.86414 14.7508 2.61414 14.5425 2.40581C14.4469 2.30585 14.3319 2.22655 14.2045 2.1728C14.077 2.11905 13.94 2.09199 13.8017 2.09331C13.5183 2.09331 13.2708 2.19747 13.0625 2.40581L6.06251 9.42664C5.97917 9.50997 5.92084 9.60081 5.88501 9.69747C5.85001 9.79791 5.83253 9.90362 5.83334 10.01C5.83334 10.1216 5.85084 10.2258 5.88501 10.3225C5.92333 10.4248 5.98396 10.5173 6.06251 10.5933L13.0833 17.6141C13.2783 17.8091 13.5175 17.9058 13.8025 17.9058C14.0867 17.9058 14.3333 17.8025 14.5417 17.5941Z" fill="#5D5D5D" fill-opacity="0.37"/>
+              </svg>
+            </div>
+            <div class="next">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M6.14587 2.40583C5.93754 2.61417 5.83337 2.86083 5.83337 3.14583C5.83337 3.43083 5.93754 3.67667 6.14587 3.885L12.25 9.98917L6.12504 16.1142C5.93087 16.3092 5.83337 16.5517 5.83337 16.8433C5.83337 17.135 5.93754 17.385 6.14587 17.5933C6.35421 17.8017 6.60087 17.9058 6.88587 17.9058C7.17087 17.9058 7.41671 17.8017 7.62504 17.5933L14.625 10.5725C14.7036 10.4966 14.7643 10.404 14.8025 10.3017C14.8375 10.205 14.855 10.1008 14.855 9.98917C14.855 9.87833 14.8375 9.77417 14.8025 9.67667C14.7642 9.57433 14.7036 9.48181 14.625 9.40583L7.60421 2.385C7.51075 2.28988 7.3988 2.21493 7.27525 2.16477C7.1517 2.1146 7.01918 2.09029 6.88587 2.09333C6.60087 2.09333 6.35421 2.1975 6.14587 2.40583Z" fill="#5D5D5D" fill-opacity="0.37"/>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     {{> _footer}}
 
     <script type="module" src="/main.js"></script>
