promo section has been created

--- a/index.html
+++ b/index.html
@@ -10,8 +10,45 @@
     {{> _header}}
 
     <section class="promo">
-      <div class="promo-container container">
-
+      <div class="promo-slider">
+        <div class="swiper js-promo-slider">
+          <div class="swiper-wrapper">
+            <div class="promo-slide swiper-slide">
+              <div class="container">
+                <div class="promo-slide__content">
+                  <p class="promo-slide__subtitle">Профилированный поликарбонат</p>
+                  <h1 class="promo-slide__title">Кровельный поликарбонат</h1>
+                  <p class="promo-slide__descr">Вариант №1 для кровли в 2024 году! </p>
+                </div>
+                <img src="/banner/banner-bg.png" alt="" class="promo-slide__bg">
+                <img src="/banner/banner-image.png" alt="" class="promo-slide__image">
+              </div>
+            </div>
+            <div class="promo-slide swiper-slide">
+              <div class="container">
+                <div class="promo-slide__content">
+                  <p class="promo-slide__subtitle">Профилированный поликарбонат</p>
+                  <h1 class="promo-slide__title">Кровельный поликарбонат</h1>
+                  <p class="promo-slide__descr">Вариант №1 для кровли в 2024 году! </p>
+                </div>
+                <img src="/banner/banner-bg.png" alt="" class="promo-slide__bg">
+                <img src="/banner/banner-image.png" alt="" class="promo-slide__image">
+              </div>
+            </div>
+            <div class="promo-slide swiper-slide">
+              <div class="container">
+                <div class="promo-slide__content">
+                  <p class="promo-slide__subtitle">Профилированный поликарбонат</p>
+                  <h1 class="promo-slide__title">Кровельный поликарбонат</h1>
+                  <p class="promo-slide__descr">Вариант №1 для кровли в 2024 году! </p>
+                </div>
+                <img src="/banner/banner-bg.png" alt="" class="promo-slide__bg">
+                <img src="/banner/banner-image.png" alt="" class="promo-slide__image">
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
     </section>
 
