--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -25,6 +25,58 @@
 			</div>
 		</section>
 
+		<section class="catalog">
+			<div class="catalog-container container">
+				<div class="catalog-heading">
+					<h2 class="catalog-title">
+						Теплицы
+					</h2>
+					<div class="catalog-count">
+						10246 товаров
+					</div>
+				</div>
+				<div class="catalog-slider">
+					<div class="swiper js-swiper-index">
+						<div class="swiper-wrapper">
+							<a href="#" class="catalog-item swiper-slide">
+								<div class="catalog-item__heading">
+									<div class="catalog-item__title">Теплицы по материалу</div>
+									<div class="catalog-item__count">33 товара</div>
+								</div>
+								<img src="/catalog/catalog-1.png" alt="">
+							</a>
+							<a href="#" class="catalog-item swiper-slide">
+								<div class="catalog-item__heading">
+									<div class="catalog-item__title">Теплицы по материалу</div>
+									<div class="catalog-item__count">33 товара</div>
+								</div>
+								<img src="/catalog/catalog-1.png" alt="">
+							</a>
+							<a href="#" class="catalog-item swiper-slide">
+								<div class="catalog-item__heading">
+									<div class="catalog-item__title">Теплицы по материалу</div>
+									<div class="catalog-item__count">33 товара</div>
+								</div>
+								<img src="/catalog/catalog-1.png" alt="">
+							</a>
+						</div>
+					</div>
+					<div class="swiper-navigation js-swiper-navigation">
+						<div class="prev">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+								<path d="M14.5417 17.5941C14.75 17.3858 14.855 17.1391 14.855 16.8533C14.855 16.57 14.7508 16.3225 14.5425 16.1141L8.43834 10.01L14.5633 3.88497C14.7575 3.69081 14.855 3.44747 14.855 3.15581C14.855 2.86414 14.7508 2.61414 14.5425 2.40581C14.4469 2.30585 14.3319 2.22655 14.2045 2.1728C14.077 2.11905 13.94 2.09199 13.8017 2.09331C13.5183 2.09331 13.2708 2.19747 13.0625 2.40581L6.06251 9.42664C5.97917 9.50997 5.92084 9.60081 5.88501 9.69747C5.85001 9.79791 5.83253 9.90362 5.83334 10.01C5.83334 10.1216 5.85084 10.2258 5.88501 10.3225C5.92333 10.4248 5.98396 10.5173 6.06251 10.5933L13.0833 17.6141C13.2783 17.8091 13.5175 17.9058 13.8025 17.9058C14.0867 17.9058 14.3333 17.8025 14.5417 17.5941Z" fill="#5D5D5D" fill-opacity="0.37"/>
+							</svg>
+						</div>
+						<div class="next">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+								<path d="M6.14587 2.40583C5.93754 2.61417 5.83337 2.86083 5.83337 3.14583C5.83337 3.43083 5.93754 3.67667 6.14587 3.885L12.25 9.98917L6.12504 16.1142C5.93087 16.3092 5.83337 16.5517 5.83337 16.8433C5.83337 17.135 5.93754 17.385 6.14587 17.5933C6.35421 17.8017 6.60087 17.9058 6.88587 17.9058C7.17087 17.9058 7.41671 17.8017 7.62504 17.5933L14.625 10.5725C14.7036 10.4966 14.7643 10.404 14.8025 10.3017C14.8375 10.205 14.855 10.1008 14.855 9.98917C14.855 9.87833 14.8375 9.77417 14.8025 9.67667C14.7642 9.57433 14.7036 9.48181 14.625 9.40583L7.60421 2.385C7.51075 2.28988 7.3988 2.21493 7.27525 2.16477C7.1517 2.1146 7.01918 2.09029 6.88587 2.09333C6.60087 2.09333 6.35421 2.1975 6.14587 2.40583Z" fill="#5D5D5D" fill-opacity="0.37"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 		{{> _footer}}
 
