catalog menu on catalog page has been created

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -76,7 +76,26 @@
 				</div>
 				<div class="catalog-content">
 					<div class="catalog-left">
-
+						<div class="catalog-left__count">
+							Найдено 4927 товаров
+						</div>
+						<div class="catalog-menu">
+							<div class="catalog-menu__title">
+								<span>Каталог</span>
+								<svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+									<path d="M13.399 6.15704C13.2646 6.01964 13.1055 5.95039 12.9211 5.95039C12.7383 5.95039 12.5787 6.01909 12.4443 6.15649L8.50676 10.1823L4.55578 6.14275C4.43053 6.01469 4.27357 5.95039 4.08543 5.95039C3.89729 5.95039 3.73602 6.01909 3.60163 6.15649C3.53716 6.21952 3.486 6.2954 3.45133 6.37943C3.41666 6.46347 3.39921 6.55388 3.40005 6.64509C3.40005 6.83195 3.46725 6.99518 3.60163 7.13258L8.13048 11.7492C8.18423 11.8042 8.24282 11.8427 8.30518 11.8663C8.36997 11.8894 8.43815 11.9009 8.50676 11.9004C8.57879 11.9004 8.64598 11.8888 8.70834 11.8663C8.77435 11.841 8.83403 11.801 8.88304 11.7492L13.4119 7.11884C13.5377 6.99024 13.6 6.8325 13.6 6.64454C13.6 6.45712 13.5334 6.29444 13.399 6.15704Z" fill="#1A1A1A"/>
+								</svg>
+							</div>
+							<ul class="catalog-menu__list">
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+								<li><a href="#" class="catalog-menu__item">Категория</a></li>
+							</ul>
+						</div>
+						<div class="catalog-filter"></div>
 					</div>
 					<div class="catalog-right">
 						<div class="catalog-wrapper">
