catalog filter has been created

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -95,7 +95,54 @@
 								<li><a href="#" class="catalog-menu__item">Категория</a></li>
 							</ul>
 						</div>
-						<div class="catalog-filter"></div>
+						<div class="catalog-filter">
+							<div class="catalog-filter__item">
+								<div class="catalog-filter__title">
+									Цена, ₽
+								</div>
+								<div class="catalog-filter__price">
+									<div class="catalog-filter__inputs">
+										<input type="number" placeholder="от 705">
+										<input type="number" placeholder="до 176 444">
+									</div>
+									<div id="priceRange" class="catalog-filter__range"></div>
+								</div>
+							</div>
+							<div class="catalog-filter__item">
+								<div class="catalog-filter__title">
+									Наши предложения
+								</div>
+								<div class="catalog-filter__wrapper">
+									<div class="catalog-filter__input">
+										<input id="check2" type="checkbox">
+										<label for="check2">Хит</label>
+									</div>
+									<div class="catalog-filter__input">
+										<input id="check3" type="checkbox">
+										<label for="check3">Советуем</label>
+									</div>
+									<div class="catalog-filter__input">
+										<input id="check4" type="checkbox">
+										<label for="check4">Новинка</label>
+									</div>
+								</div>
+							</div>
+							<div class="catalog-filter__item">
+								<div class="catalog-filter__title">
+									Наши предложения
+								</div>
+								<div class="catalog-filter__wrapper">
+									<div class="catalog-filter__input">
+										<input id="check5" type="checkbox">
+										<label for="check5">В наличии</label>
+									</div>
+								</div>
+							</div>
+							<div class="catalog-filter__buttons">
+								<button class="catalog-filter__submit">Показать 90 товаров</button>
+								<button class="catalog-filter__reset">Сбросить все фильтры</button>
+							</div>
+						</div>
 					</div>
 					<div class="catalog-right">
 						<div class="catalog-wrapper">
