about page has been created

--- a/pages/_catalog.html
+++ b/pages/_catalog.html
@@ -15,7 +15,7 @@
 					<a href="/" class="breadcrumbs-item">
 						Каталог
 					</a>
-					<a href="/pages/catalog.html" class="breadcrumbs-item">
+					<a href="/pages/_catalog.html" class="breadcrumbs-item">
 						Каталог
 					</a>
 					<span class="breadcrumbs-item">
