product tabs has been created (no review tab)

--- a/pages/_product.html
+++ b/pages/_product.html
@@ -200,6 +200,147 @@
 							</div>
 						</div>
 					</div>
+					<div class="product-bottom">
+						<div class="product-tabs">
+							<div class="product-tabs__item" data-tab="characteristic" id="js-tab-characteristic">
+								Характеристики
+							</div>
+							<div class="product-tabs__item" data-tab="description" id="js-tab-description">
+								Описание
+							</div>
+							<div class="product-tabs__item" data-tab="review">
+								Отзывы
+							</div>
+							<div class="product-tabs__item" data-tab="delivery">
+								Доставка
+							</div>
+							<div class="product-tabs__item" data-tab="additional">
+								Дополнительно
+							</div>
+						</div>
+						<div class="product-content">
+							<div class="product-content__item" data-tab="characteristic" id="js-content-characteristic">
+								<div class="product-content__title">
+									Характеристики
+								</div>
+								<div class="product-content__wrapper product-characteristic">
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Модель теплицы
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											Дачница Стандарт
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Расстояние между дугами, м
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											1
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Материал каркаса
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											Оцинкованная профильная труба
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Размер трубы, мм
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											30*20
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Способ соединения
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											Труба в трубу
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Двери, шт
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											2
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Форточки, шт
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											2
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Размер
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											3000*4000*2100 мм
+										</div>
+									</div>
+									<div class="product-characteristic__item">
+										<div class="product-characteristic__left">
+											Вес, кг
+										</div>
+										<div class="product-characteristic__dots"></div>
+										<div class="product-characteristic__right">
+											60 кг
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="product-content__item" data-tab="description" id="js-content-description">
+								<div class="product-content__title">
+									Описание
+								</div>
+								<div class="product-content__wrapper description">
+									<p>Теплица  - лидер продаж.  Ширина три метра позволяет установить три грядки  и два прохода и максимально использовать внутреннее пространство для получения богатого урожая, либо две широких грядки и дорожку посредине. Высота теплицы (2,05 м) позволяет свободно находиться внутри людям выше среднего роста. Благодаря широкому дверному проему и удобному размеру вентиляционной форточки создаются комфортные условия для прохода и проветривания теплицы. Теплица длиной 6 метров состоит из модуля теплицы 4 метра и 2-х метровой вставки-удлинителя.</p>
+								</div>
+							</div>
+							<div class="product-content__item" data-tab="review">
+								<div class="product-content__title">
+									Отзывы
+								</div>
+								<div class="product-content__wrapper">
+
+								</div>
+							</div>
+							<div class="product-content__item" data-tab="delivery">
+								<div class="product-content__title">
+									Доставка
+								</div>
+								<div class="product-content__wrapper description">
+									<p> Мы доставляем теплицу в удобное для вас время и место. Габариты упаковки (модуль 4 м и вставка 2 м) позволяют легко транспортировать конструкцию даже в легковом автомобиле с прицепом. Доставка осуществляется по всей территории региона, а сроки зависят от вашего местоположения — в среднем от 1 до 3 дней. Благодаря компактной сборке и подробной инструкции вы сможете быстро установить теплицу самостоятельно, без привлечения специалистов. </p>
+								</div>
+							</div>
+							<div class="product-content__item" data-tab="additional">
+								<div class="product-content__title">
+									Дополнительно
+								</div>
+								<div class="product-content__wrapper description">
+									<p> Теплица оснащена всем необходимым для удобства и долговечности. В комплект входят прочный каркас из оцинкованной стали, устойчивый к коррозии, и надежное покрытие из поликарбоната толщиной 4 мм, которое защищает растения от ультрафиолета и сохраняет тепло. Ширина основания в 3 метра обеспечивает устойчивость конструкции даже при сильных ветрах. Дополнительно можно приобрести автоматические системы проветривания и полива, которые упростят уход за растениями и помогут поддерживать оптимальный микроклимат внутри теплицы. </p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
