the adaptive catalog is almost done (except for the product cards)

--- a/pages/_catalog.html
+++ b/pages/_catalog.html
@@ -37,7 +37,7 @@
 						</div>
 					</div>
 					<div class="catalog-slider">
-						<div class="swiper js-swiper-index">
+						<div class="swiper js-catalog-slider">
 							<div class="swiper-wrapper">
 								<a href="#" class="catalog-item swiper-slide">
 									<div class="catalog-item__heading">
@@ -62,7 +62,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="swiper-navigation js-swiper-navigation">
+						<div class="swiper-navigation js-catalog-navigation">
 							<div class="prev">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
 									<path d="M14.5417 17.5941C14.75 17.3858 14.855 17.1391 14.855 16.8533C14.855 16.57 14.7508 16.3225 14.5425 16.1141L8.43834 10.01L14.5633 3.88497C14.7575 3.69081 14.855 3.44747 14.855 3.15581C14.855 2.86414 14.7508 2.61414 14.5425 2.40581C14.4469 2.30585 14.3319 2.22655 14.2045 2.1728C14.077 2.11905 13.94 2.09199 13.8017 2.09331C13.5183 2.09331 13.2708 2.19747 13.0625 2.40581L6.06251 9.42664C5.97917 9.50997 5.92084 9.60081 5.88501 9.69747C5.85001 9.79791 5.83253 9.90362 5.83334 10.01C5.83334 10.1216 5.85084 10.2258 5.88501 10.3225C5.92333 10.4248 5.98396 10.5173 6.06251 10.5933L13.0833 17.6141C13.2783 17.8091 13.5175 17.9058 13.8025 17.9058C14.0867 17.9058 14.3333 17.8025 14.5417 17.5941Z" fill="#5D5D5D" fill-opacity="0.37"/>
@@ -168,6 +168,30 @@
 										<svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
 											<path d="M4.5 2.96973C3.96957 2.96973 3.46086 3.18044 3.08579 3.55551C2.71071 3.93059 2.5 4.43929 2.5 4.96973V8.96973C2.5 9.50016 2.71071 10.0089 3.08579 10.3839C3.46086 10.759 3.96957 10.9697 4.5 10.9697H18.5C19.0304 10.9697 19.5391 10.759 19.9142 10.3839C20.2893 10.0089 20.5 9.50016 20.5 8.96973V4.96973C20.5 4.43929 20.2893 3.93059 19.9142 3.55551C19.5391 3.18044 19.0304 2.96973 18.5 2.96973H4.5ZM4.5 12.9697C3.96957 12.9697 3.46086 13.1804 3.08579 13.5555C2.71071 13.9306 2.5 14.4393 2.5 14.9697V18.9697C2.5 19.5002 2.71071 20.0089 3.08579 20.3839C3.46086 20.759 3.96957 20.9697 4.5 20.9697H18.5C19.0304 20.9697 19.5391 20.759 19.9142 20.3839C20.2893 20.0089 20.5 19.5002 20.5 18.9697V14.9697C20.5 14.4393 20.2893 13.9306 19.9142 13.5555C19.5391 13.1804 19.0304 12.9697 18.5 12.9697H4.5Z" fill="#9C9C9C"/>
 										</svg>
+									</div>
+								</div>
+								<div class="catalog-mobile">
+									<div class="catalog-mobile__sort">
+										<div class="catalog-sort__trigger">
+											<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+												<rect y="2" width="20" height="2" rx="1" fill="#08A826"/>
+												<rect y="9" width="15" height="2" rx="1" fill="#08A826"/>
+												<rect y="16" width="10" height="2" rx="1" fill="#08A826"/>
+											</svg>
+											<span>По популярности</span>
+										</div>
+										<ul>
+											<li class="active">По популярности</li>
+											<li>По отзывам</li>
+											<li>По рейтингу</li>
+											<li>По цене</li>
+										</ul>
+									</div>
+									<div class="catalog-mobile__filter" id="js-filter-trigger">
+										<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+											<path d="M17.5 2.5H4.16668C3.94566 2.5 3.7337 2.5878 3.57742 2.74408C3.42114 2.90036 3.33334 3.11232 3.33334 3.33333V5.49167C3.33334 5.9275 3.51084 6.35583 3.81918 6.66417L8.33334 11.1783V17.5C8.33351 17.642 8.3699 17.7816 8.43909 17.9055C8.50828 18.0295 8.60797 18.1338 8.72871 18.2085C8.84946 18.2832 8.98727 18.3258 9.1291 18.3323C9.27092 18.3389 9.41207 18.3091 9.53918 18.2458L12.8725 16.5792C13.155 16.4375 13.3333 16.1492 13.3333 15.8333V11.1783L17.8475 6.66417C18.1558 6.35583 18.3333 5.9275 18.3333 5.49167V3.33333C18.3333 3.11232 18.2455 2.90036 18.0893 2.74408C17.933 2.5878 17.721 2.5 17.5 2.5ZM11.9108 10.2442C11.8333 10.3214 11.7718 10.4132 11.7299 10.5144C11.688 10.6155 11.6665 10.7239 11.6667 10.8333V15.3183L10 16.1517V10.8333C10.0002 10.7239 9.97868 10.6155 9.93677 10.5144C9.89487 10.4132 9.83338 10.3214 9.75584 10.2442L5.00001 5.49167V4.16667H16.6675L16.6692 5.48583L11.9108 10.2442Z" fill="#08A826"/>
+										</svg>
+										<span>Фильтры</span>
 									</div>
 								</div>
 							</div>
