adaptive for cart has been created

--- a/pages/_cart.html
+++ b/pages/_cart.html
@@ -429,6 +429,20 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="cart-mobile" style="display: none">
+				<div class="cart-mobile__wrapper">
+					<div class="cart-mobile__left">
+						<div class="cart-mobile__total">13 500  ₽</div>
+						<div class="cart-mobile__count">2 товара</div>
+					</div>
+					<div class="cart-mobile__right">
+						<a href="#" class="cart-order">
+							Оформить заказ
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		{{> _footer}}
