adaptive for product page has been created

--- a/pages/_product.html
+++ b/pages/_product.html
@@ -126,6 +126,7 @@
 											<img src="/products/product-slider.png" alt="">
 										</a>
 									</div>
+									<div class="swiper-pagination" style="display: none"></div>
 								</div>
 								<div class="product-banner">
 									<div class="product-banner__item days">Товар дня</div>
