adaptive for main page has been created

--- a/index.html
+++ b/index.html
@@ -1823,6 +1823,7 @@
                   </div>
                 </div>
               </div>
+              <div class="swiper-pagination" style="display: none"></div>
             </div>
             <div class="review-slider__navigation js-review-navigation">
               <div class="prev">
