create sliders.js file

--- a/index.html
+++ b/index.html
@@ -2332,6 +2332,7 @@
 
     {{> _footer}}
 
+    <script type="module" src="/sliders.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
