--- a/pages/_about.html
+++ b/pages/_about.html
@@ -181,6 +181,7 @@
 
 		{{> _footer}}
 
+		<script type="module" src="/sliders.js"></script>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
